--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
+    "recharts": "^2.14.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
